--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ dependencies {
             "com.codeborne:selenide:$selenideVersion",
             "io.qameta.allure:allure-selenide:$allureVersion",
             "io.rest-assured:rest-assured:5.0.1",
-            "io.qameta.allure:allur3e-rest-assured:$allureVersion",
+            "io.qameta.allure:allure-rest-assured:$allureVersion",
             "org.aeonbits.owner:owner:1.0.12",
             "org.assertj:assertj-core:3.22.0",
             "org.junit.jupiter:junit-jupiter:$junitVersion")
