--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,8 @@ repositories {
     mavenCentral()
 }
 
-def allureVersion = "2.17.3",
-    selenideVersion = "6.4.0",
+def allureVersion = '2.18.1',
+    selenideVersion = '6.6.1',
     junitVersion = "5.8.2"
 
 allure {
@@ -26,10 +26,10 @@ dependencies {
             "org.aspectj:aspectjweaver:1.9.9.1",
             "com.codeborne:selenide:$selenideVersion",
             "io.qameta.allure:allure-selenide:$allureVersion",
-            "io.rest-assured:rest-assured:5.0.1",
+            'io.rest-assured:rest-assured:5.1.0',
             "io.qameta.allure:allure-rest-assured:$allureVersion",
             "org.aeonbits.owner:owner:1.0.12",
-            "org.assertj:assertj-core:3.22.0",
+            "org.assertj:assertj-core:3.23.1",
             "org.junit.jupiter:junit-jupiter:$junitVersion")
     testRuntimeOnly(
             "org.slf4j:slf4j-simple:1.7.36",
@@ -65,9 +65,9 @@ tasks.withType(Test) {
     }
 }
 
-task testCCSSite(type: Test) {
+task testCcsSite(type: Test) {
     useJUnitPlatform {
-        includeTags 'testCCSSite'
+        includeTags 'testCcsSite'
     }
 }
 
@@ -83,3 +83,8 @@ task testSectionServices(type: Test) {
     }
 }
 
+task testSectionVacancies(type: Test) {
+    useJUnitPlatform {
+        includeTags 'testSectionVacancies'
+    }
+}
